Add switchbar to HeadsUp Settings
Change-Id: I005efe6817ee9fb7ed1324629528edc41f6880d6
Signed-off-by: rohan <purohit.rohan@gmail.com>

--- a/res/xml/heads_up_settings.xml
+++ b/res/xml/heads_up_settings.xml
@@ -16,10 +16,10 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/heads_up_notifications">
 
-    <!-- Bliss Logo Header -->
+    <!-- Bliss Logo Header
     <Preference 
         android:key="bliss_logo"
-        android:layout="@layout/bliss_logo" />
+        android:layout="@layout/bliss_logo" /> -->
 
     <ListPreference
         android:key="heads_up_time_out"
