Blissify: Add QS header styles [2/3]
Change-Id: I36e9835c54a3a76b6b13d614775c5dd76d2cc47c

--- a/res/xml/blissify_themes.xml
+++ b/res/xml/blissify_themes.xml
@@ -111,6 +111,13 @@
             android:entries="@array/qs_selector_entries"
             android:entryValues="@array/qs_selector_values" />
 
+        <ListPreference
+            android:key="qs_header_style"
+            android:title="@string/qs_header_style_title"
+            android:persistent="false"
+            android:entries="@array/qs_header_style_entries"
+            android:entryValues="@array/qs_header_style_values" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
