--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1785,4 +1785,12 @@
     <string name="qs_data_usage_location_title">Qs Data Usage Location</string>
     <string name="qs_data_usage_location_qs_panel">QS Panel</string>
     <string name="qs_data_usage_location_qs_statusbar">Quick Statusbar</string>
+
+    <!-- QS header styles -->
+    <string name="qs_header_style_title">QS Header style</string>
+    <string name="qs_header_black">Black</string>
+    <string name="qs_header_grey">Grey</string>
+    <string name="qs_header_lightgrey">Light Grey</string>
+    <string name="qs_header_accent">Accent Based</string>
+    <string name="qs_header_transparent">Transparent</string>
 </resources>
