Evolver: Pulse navbar audio gfx visualizer for Android 10 [3/4]
Change-Id: I84dbb19bc237a1fff554b6c70820c87d6637f0b9
Signed-off-by: Joey Huab <joey@evolution-x.org>

--- a/res/xml/blissify_buttons.xml
+++ b/res/xml/blissify_buttons.xml
@@ -103,6 +103,12 @@
             android:entries="@array/hardware_keys_action_entries"
             android:entryValues="@array/hardware_keys_action_values"
             android:persistent="false" />
+
+        <Preference
+            android:key="pulse"
+            android:title="@string/pulse_settings"
+            android:summary="@string/pulse_settings_summary"
+            android:fragment="com.blissroms.blissify.fragments.buttons.PulseSettings" />
     </PreferenceCategory>
 
     <PreferenceCategory
