--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -560,7 +560,8 @@
         <item>@string/qs_brightness_slider_hide</item>
         <item>@string/qs_brightness_slider_top</item>
         <item>@string/qs_brightness_slider_bottom</item>
-        <item>@string/qs_brightness_slider_show_expanded</item>
+        <item>@string/qs_brightness_slider_always_top</item>
+        <item>@string/qs_brightness_slider_always_bottom</item>
     </string-array>
 
     <string-array name="qs_brightness_slider_values" translatable="false">
@@ -568,6 +569,7 @@
         <item>1</item>
         <item>2</item>
         <item>3</item>
+        <item>4</item>
     </string-array>
 
     <!-- Volume steps -->
