--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -508,7 +508,8 @@
     <string name="qs_brightness_slider_hide">Hide</string>
     <string name="qs_brightness_slider_top">Top</string>
     <string name="qs_brightness_slider_bottom">Bottom</string>
-    <string name="qs_brightness_slider_show_expanded">Show when expanded</string>
+    <string name="qs_brightness_slider_always_top">Quick Qs (top)</string>
+    <string name="qs_brightness_slider_always_bottom">Quick Qs (bottom)</string>
 
     <!-- Quick settings brightness icon -->
     <string name="brightness_icon_title">Auto brightness</string>
