Rework Network Traffic [3/3]
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Change-Id: I0a38568c3158b0de2ad6702374cc0e2a35b0f170

--- a/res/xml/network_traffic_settings.xml
+++ b/res/xml/network_traffic_settings.xml
@@ -66,7 +66,7 @@
         settings:min="1"
         settings:units="@string/unit_seconds" />
 
-    <lineageos.preference.LineageSecureSettingSwitchPreference
+    <!--<lineageos.preference.LineageSecureSettingSwitchPreference
         android:key="network_traffic_show_units"
         android:title="@string/network_traffic_show_units"
         android:summary="@string/network_traffic_show_units_summary"
@@ -79,7 +79,7 @@
         android:entryValues="@array/network_traffic_units_values"
         android:summary="%s"
         android:defaultValue="1"
-        android:dependency="network_traffic_show_units" />
+        android:dependency="network_traffic_show_units" /> -->
 
     <lineageos.preference.LineageSecureSettingSwitchPreference
         android:key="network_traffic_hidearrow"
