Blissify: add dependency for qs label tint
* only works on new tint style

Change-Id: Id3a71b5b7c3bb34407f5a065a7271798aa450ddf

--- a/res/xml/blissify_qs.xml
+++ b/res/xml/blissify_qs.xml
@@ -256,7 +256,8 @@
         android:entries="@array/qs__label_tint_entries"
         android:entryValues="@array/qs_label_tint_values"
         android:summary="%s"
-        android:defaultValue="1" />
+        android:defaultValue="1"
+        android:dependency="qs_panel_bg_use_new_tint" />
 
     <com.bliss.support.preferences.SecureSettingSwitchPreference
         android:key="quick_settings_vibrate"
