--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -186,12 +186,14 @@
         <item>@string/network_traffic_mode_all</item>
         <item>@string/network_traffic_mode_up</item>
         <item>@string/network_traffic_mode_down</item>
+        <item>@string/network_traffic_mode_dynamic</item>
     </string-array>
 
     <string-array name="network_traffic_mode_values" translatable="false">
         <item>0</item>
         <item>1</item>
         <item>2</item>
+        <item>3</item>
     </string-array>
 
     <string-array name="network_traffic_units_entries" translatable="false">
