--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -279,6 +279,7 @@
     <string name="network_traffic_mode_up">Upload only</string>
     <string name="network_traffic_mode_down">Download only</string>
     <string name="network_traffic_mode_all">Upload and download</string>
+    <string name="network_traffic_mode_dynamic">Dynamic</string>
     <string name="network_traffic_autohide">Auto hide</string>
     <string name="network_traffic_autohide_summary">Hide the traffic monitor when inactive</string>
     <string name="network_traffic_autohide_kilobits">Kb/s</string>
