--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1699,4 +1699,19 @@
         <item>12</item>
     </string-array>
 
+    <!-- Switch styles -->
+    <string-array name="switch_style_entries" translatable="false">
+        <item>@string/switch_default</item>
+        <item>@string/switch_oneplus</item>
+        <item>@string/switch_narrow</item>
+        <item>@string/switch_contained</item>
+    </string-array>
+
+    <string-array name="switch_style_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
 </resources>
