--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1621,4 +1621,11 @@
     <string name="qstile_inkdrop">Ink</string>
     <string name="qstile_cookie">Cookie</string>
     <string name="qstile_circleoutline">Circle Outline</string>
+
+    <!-- Switch styles -->
+    <string name="switch_style_title">Switch Styles</string>
+    <string name="switch_default">Default</string>
+    <string name="switch_oneplus">OnePlus</string>
+    <string name="switch_narrow">Narrow</string>
+    <string name="switch_contained">Contained</string>
 </resources>
