--- a/res/xml/blissify_themes.xml
+++ b/res/xml/blissify_themes.xml
@@ -92,4 +92,19 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:key="switches_category"
+        android:icon="@drawable/ic_bliss_themes"
+        android:title="@string/switch_style_title">
+
+    <com.bliss.support.preferences.SystemSettingListPreference
+        android:key="switch_style"
+        android:title="@string/switch_style_title"
+        android:dialogTitle="@string/switch_style_title"
+        android:entries="@array/switch_style_entries"
+        android:entryValues="@array/switch_style_values"
+        android:summary="%s"
+        android:defaultValue="0" />
+    </PreferenceCategory>
+
 </PreferenceScreen>
