NetworkTraffic: Add support for bits/sec [2/2]
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Change-Id: Ib2392d8eb24ce6711b7974a9b5c8196442536110

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -171,6 +171,7 @@
     <string name="status_bar_quick_qs_pulldown_off">Off</string>
     <string name="status_bar_quick_qs_pulldown_left">Left</string>
     <string name="status_bar_quick_qs_pulldown_right">Right</string>
+    <string name="status_bar_quick_qs_pulldown_always">Always show quick settings on status bar pull down</string>
     <string name="status_bar_double_tap_to_sleep_title">Double-tap to sleep</string>
     <string name="status_bar_double_tap_to_sleep_summary">Double-tap on the status bar to turn off the display</string>
 
