--- a/res/xml/network_traffic_settings.xml
+++ b/res/xml/network_traffic_settings.xml
@@ -70,7 +70,7 @@
         android:key="network_traffic_show_units"
         android:title="@string/network_traffic_show_units"
         android:summary="@string/network_traffic_show_units_summary"
-        android:defaultValue="true" />
+        android:defaultValue="true" />-->
 
     <lineageos.preference.LineageSecureSettingListPreference
         android:key="network_traffic_units"
@@ -78,8 +78,7 @@
         android:entries="@array/network_traffic_units_entries"
         android:entryValues="@array/network_traffic_units_values"
         android:summary="%s"
-        android:defaultValue="1"
-        android:dependency="network_traffic_show_units" /> -->
+        android:defaultValue="1" />
 
     <lineageos.preference.LineageSecureSettingSwitchPreference
         android:key="network_traffic_hidearrow"
