--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1705,6 +1705,7 @@
         <item>@string/switch_oneplus</item>
         <item>@string/switch_narrow</item>
         <item>@string/switch_contained</item>
+        <item>@string/switch_telegram</item>
     </string-array>
 
     <string-array name="switch_style_values" translatable="false">
@@ -1712,6 +1713,7 @@
         <item>1</item>
         <item>2</item>
         <item>3</item>
+        <item>4</item>
     </string-array>
 
 </resources>
