--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1628,4 +1628,5 @@
     <string name="switch_oneplus">OnePlus</string>
     <string name="switch_narrow">Narrow</string>
     <string name="switch_contained">Contained</string>
+    <string name="switch_telegram">Telegram</string>
 </resources>
