homepage: follow system font
Change-Id: I0a3b98eed4bb5166e998478b928746d0c73fc933

--- a/res/layout/bliss_preference.xml
+++ b/res/layout/bliss_preference.xml
@@ -62,7 +62,7 @@
         android:ellipsize="marquee"
         android:marqueeRepeatLimit="marquee_forever"
         android:scrollHorizontally="true"
-        android:textStyle="bold"
+        android:fontFamily="@*android:string/config_bodyFontFamily"
         android:textSize="14sp"
         android:textColor="?android:attr/colorAccent"/>
 
