--- a/res/layout/bliss_preference.xml
+++ b/res/layout/bliss_preference.xml
@@ -18,6 +18,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_gravity="center_vertical"
     android:clickable="true"
     android:focusable="true"
     android:layout_marginTop="-2dp"
@@ -37,8 +38,8 @@
         android:id="@android:id/icon"
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:layout_alignRight="@id/buttonshape"
-        android:layout_marginStart="0dp"
+        android:layout_alignleft="@id/buttonshape"
+        android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="28dp"
         android:background="@*android:color/transparent"
