--- a/res/layout/bliss_preference.xml
+++ b/res/layout/bliss_preference.xml
@@ -18,10 +18,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_gravity="center_vertical"
     android:clickable="true"
     android:focusable="true"
-    android:layout_marginTop="-2dp"
-    android:layout_marginBottom="8dp">
+    android:layout_marginTop="4dp"
+    android:layout_marginBottom="4dp">
 
     <ImageView
         android:id="@+id/buttonshape"
@@ -29,16 +30,17 @@
         android:layout_height="40dp"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:scaleType="center"
         android:background="@drawable/buttonshape"/>
 
     <ImageView
         android:id="@android:id/icon"
         android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_alignRight="@id/buttonshape"
-        android:layout_marginStart="0dp"
+        android:layout_height="20dp"
+        android:layout_alignLeft="@id/buttonshape"
+        android:layout_marginStart="30dp"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="28dp"
         android:background="@*android:color/transparent"
