--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -46,6 +46,12 @@
         android:summary="@string/lockscreen_hide_clock_summary"
         android:defaultValue="false" />
 
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="lockscreen_clock_color"
+        android:title="@string/lockscreen_clock_color_title"
+        android:summary="@string/lockscreen_clock_color_summary"
+        android:defaultValue="false" />
+
     <com.bliss.support.preferences.SystemSettingListPreference
         android:key="lockscreen_clock_selection"
         android:title="@string/lockscreen_clock_title"
