Blissify: Add EMUI VoLTE icon [2/2]
Signed-off-by: DennySPb <dennyspb@gmail.com>
Change-Id: I40dbf53d9e211165066ea38db98b89b9f4e21d5e

--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -915,6 +915,7 @@
         <item>@string/status_bar_volte_style_7</item>
         <item>@string/status_bar_volte_style_8</item>
         <item>@string/status_bar_volte_style_9</item>
+        <item>@string/status_bar_volte_style_10</item>
     </string-array>
 
     <string-array name="status_bar_volte_values" translatable="false">
@@ -928,6 +929,7 @@
         <item>7</item>
         <item>8</item>
         <item>9</item>
+        <item>10</item>
     </string-array>
 
     <!-- VoWiFi icon style -->
