Blissify: Add more VoWiFi icon styles [2/2]
Signed-off-by: DennySPb <dennyspb@gmail.com>
Change-Id: If75cc4d840c64edae6a29a10a370b66ce2069eed

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -494,6 +494,14 @@
     <string name="status_bar_volte_style_8">VoLTE Asus Icon</string>
     <string name="status_bar_volte_style_9">Miui 11 VoLTE</string>
 
+    <!-- VoWiFi icon -->
+    <string name="vowifi_icon_style_title">VoWiFi icon style</string>
+    <string name="vowifi_icon_default">Default</string>
+    <string name="vowifi_icon_asus">Asus</string>
+    <string name="vowifi_icon_emui">EMUI</string>
+    <string name="vowifi_icon_moto">Motorola</string>
+    <string name="vowifi_icon_oneplus">OOS</string>
+
     <!-- Data disabled indicator -->
     <string name="data_disabled_icon_title">Data disabled indicator</string>
     <string name="data_disabled_icon_summary">Display the cross sign next to signal icon when data is disabled</string>
