--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -930,6 +930,23 @@
         <item>9</item>
     </string-array>
 
+    <!-- VoWiFi icon style -->
+    <string-array name="vowifi_icon_style_entries" translatable="false">
+        <item>@string/vowifi_icon_default</item>
+        <item>@string/vowifi_icon_oneplus</item>
+        <item>@string/vowifi_icon_moto</item>
+        <item>@string/vowifi_icon_asus</item>
+        <item>@string/vowifi_icon_emui</item>
+    </string-array>
+
+    <string-array name="vowifi_icon_style_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+    </string-array>
+
     <!-- Lockscreen clock styles -->
     <string-array name="lockscreen_clock_selection_entries" translatable="false">
         <item>@string/lockscreen_clock_selection_digital</item>
