--- a/res/xml/statusbar_advanced_icons.xml
+++ b/res/xml/statusbar_advanced_icons.xml
@@ -33,6 +33,15 @@
             android:summary="%s"
             android:defaultValue="0"/>
 
+       <com.bliss.support.preferences.SystemSettingListPreference
+            android:key="vowifi_icon_style"
+            android:title="@string/vowifi_icon_style_title"
+            android:entries="@array/vowifi_icon_style_entries"
+            android:entryValues="@array/vowifi_icon_style_values"
+            android:dependency="vowifi_icon"
+            android:summary="%s"
+            android:defaultValue="0"/>
+
     </PreferenceCategory>
 
     <PreferenceCategory
