--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -375,24 +375,28 @@
         <item>@string/status_bar_quick_qs_pulldown_off</item>
         <item>@string/status_bar_quick_qs_pulldown_right</item>
         <item>@string/status_bar_quick_qs_pulldown_left</item>
+        <item>@string/status_bar_quick_qs_pulldown_always</item>
     </string-array>
 
     <string-array name="status_bar_quick_qs_pulldown_entries_rtl" translatable="false">
         <item>@string/status_bar_quick_qs_pulldown_off</item>
         <item>@string/status_bar_quick_qs_pulldown_left</item>
         <item>@string/status_bar_quick_qs_pulldown_right</item>
+        <item>@string/status_bar_quick_qs_pulldown_always</item>
     </string-array>
 
     <string-array name="status_bar_quick_qs_pulldown_values" translatable="false">
         <item>0</item>
         <item>1</item>
         <item>2</item>
+        <item>3</item>
     </string-array>
 
     <string-array name="status_bar_quick_qs_pulldown_values_rtl" translatable="false">
         <item>2</item>
         <item>1</item>
         <item>0</item>
+        <item>3</item>
     </string-array>
     
     <!-- Hardware key rebinding -->
