--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1378,12 +1378,14 @@
     <string-array name="fod_recog_animation_entries" translatable="false">
         <item>@string/fod_recog_animation_miui_normal</item>
         <item>@string/fod_recog_animation_miui_aod</item>
+        <item>@string/fod_recog_animation_miui_aurora</item>
         <item>@string/fod_recog_animation_miui_light</item>
         <item>@string/fod_recog_animation_miui_pop</item>
         <item>@string/fod_recog_animation_miui_pulse</item>
         <item>@string/fod_recog_animation_miui_pulse_white</item>
         <item>@string/fod_recog_animation_miui_rhythm</item>
         <item>@string/fod_recog_animation_op_cosmos</item>
+        <item>@string/fod_recog_animation_op_energy</item>
         <item>@string/fod_recog_animation_op_mclaren</item>
         <item>@string/fod_recog_animation_op_ripple</item>
         <item>@string/fod_recog_animation_op_stripe</item>
@@ -1417,6 +1419,8 @@
         <item>16</item>
         <item>17</item>
         <item>18</item>
+        <item>19</item>
+        <item>20</item>
     </string-array>
 
     <!-- Lockscreen Charging Animation -->
