--- a/res/xml/volume_panel.xml
+++ b/res/xml/volume_panel.xml
@@ -80,4 +80,17 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:key="volume_panel_stuff"
+        android:title="@string/volume_panel">
+
+        <com.aosip.support.preference.SystemSettingListPreference
+            android:key="systemui_plugin_volume"
+            android:title="@string/volume_panel"
+            android:entries="@array/volume_panel_entries"
+            android:entryValues="@array/volume_panel_values"
+            android:defaultValue="@string/volume_panel_aosp_val" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
