--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -494,6 +494,10 @@
     <string name="status_bar_volte_style_8">VoLTE Asus Icon</string>
     <string name="status_bar_volte_style_9">Miui 11 VoLTE</string>
 
+    <!-- VoWiFi icon -->
+    <string name="vowifi_icon_title">VoWiFi icon</string>
+    <string name="vowifi_icon_summary">Display VoWiFi icon when available</string>
+
     <!-- Data disabled indicator -->
     <string name="data_disabled_icon_title">Data disabled indicator</string>
     <string name="data_disabled_icon_summary">Display the cross sign next to signal icon when data is disabled</string>
