--- a/res/xml/statusbar_advanced_icons.xml
+++ b/res/xml/statusbar_advanced_icons.xml
@@ -25,13 +25,25 @@
         android:icon="@drawable/ic_volte"
         android:title="@string/volte_icon_title" >
 
-       <com.bliss.support.preferences.SystemSettingListPreference
+       <com.bliss.support.preferences.SystemSettingSeekBarPreference
             android:key="volte_icon_style"
             android:title="@string/volte_icon_title"
-            android:entries="@array/status_bar_volte_entries"
-            android:entryValues="@array/status_bar_volte_values"
-            android:summary="%s"
-            android:defaultValue="0"/>
+            android:summary="@string/volte_icon_summary"
+            android:defaultValue="0"
+            settings:defaultValueText="@string/disabled"
+            android:max="9"
+            settings:min="0"
+            settings:units="" />
+
+       <com.bliss.support.preferences.SystemSettingSeekBarPreference
+            android:key="vowifi_icon_style"
+            android:title="@string/vowifi_icon_title"
+            android:summary="@string/vowifi_icon_summary"
+            android:defaultValue="0"
+            settings:defaultValueText="@string/disabled"
+            android:max="5"
+            settings:min="0"
+            settings:units="" />
 
     </PreferenceCategory>
 
