--- a/res/xml/statusbar_advanced_icons.xml
+++ b/res/xml/statusbar_advanced_icons.xml
@@ -33,6 +33,16 @@
             android:summary="%s"
             android:defaultValue="0"/>
 
+       <com.bliss.support.preferences.SystemSettingSeekBarPreference
+            android:key="vowifi_icon_style"
+            android:title="@string/vowifi_icon_title"
+            android:summary="@string/vowifi_icon_summary"
+            android:defaultValue="0"
+            settings:defaultValueText="@string/disabled"
+            android:max="5"
+            settings:min="0"
+            settings:units="" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
