--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -501,6 +501,8 @@
     <string name="vowifi_icon_emui">EMUI</string>
     <string name="vowifi_icon_moto">Motorola</string>
     <string name="vowifi_icon_oneplus">OOS</string>
+    <string name="volte_vowifi_override_title">VoWiFi override</string>
+    <string name="volte_vowifi_override_summary">Hide VoLTE when VoWiFi is available. This also overrides old style signal icon for VoWiFi.</string>
 
     <!-- Data disabled indicator -->
     <string name="data_disabled_icon_title">Data disabled indicator</string>
