Blissify: Override VoLTE icon with VoWiFi when available [2/2]
Change-Id: Ia1948ebb494826da7d43a824cbd82029758c736d

--- a/res/xml/statusbar_advanced_icons.xml
+++ b/res/xml/statusbar_advanced_icons.xml
@@ -33,6 +33,12 @@
             android:summary="%s"
             android:defaultValue="0"/>
 
+       <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="volte_vowifi_override"
+            android:title="@string/volte_vowifi_override_title"
+            android:summary="@string/volte_vowifi_override_summary"
+            android:defaultValue="true"/>
+
     </PreferenceCategory>
 
     <PreferenceCategory
