Blissify: Add support for dual notch cutout [2/2]
Change-Id: Icfd3aa8a73e230e597fa33971683f58003651eb8

--- a/res/xml/cutout.xml
+++ b/res/xml/cutout.xml
@@ -34,4 +34,10 @@
         android:summary="@string/stock_statusbar_in_hide_summary"
         android:defaultValue="true" />
 
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="dual_notch_pill_hide"
+        android:title="@string/dual_notch_pill_hide_title"
+        android:summary="@string/dual_notch_pill_hide_summary"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
