--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1849,4 +1849,14 @@
         <item>space;space;left,back,home,recent,right</item>
     </string-array>
 
+    <!-- QS statusbar background -->
+    <string-array name="qs_header_background_entries">
+        <item>@string/qs_header_background_black</item>
+        <item>@string/qs_header_background_transparent</item>
+    </string-array>
+    <string-array name="qs_header_background_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
 </resources>
