--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1720,4 +1720,9 @@
     <string name="navbar_invert_layout_title">Invert layout</string>
     <string name="navbar_tuner_title">Navbar tuner</string>
     <string name="navbar_tuner_summary">Customize buttons and layout</string>
+
+    <!-- QS statusbar background -->
+    <string name="qs_header_background_title">Statusbar background</string>
+    <string name="qs_header_background_black">Black</string>
+    <string name="qs_header_background_transparent">Transparent</string>
 </resources>
