Add JustIcons QS Tile style [3/3]
Signed-off-by: vjspranav <pranavasri@live.in>
Change-Id: If42f7207a98c81a2bc9d3c6566107f29d1a08991

--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1755,6 +1755,7 @@
         <item>@string/qstile_cosmos</item>
         <item>@string/qstile_squircle</item>
         <item>@string/qstile_teardrop</item>
+        <item>@string/qstile_justicons</item>
     </string-array>
 
     <string-array name="qs_selector_values" translatable="false">
@@ -1778,6 +1779,7 @@
         <item>17</item>
         <item>18</item>
         <item>19</item>
+        <item>20</item>
     </string-array>
 
     <!-- Switch styles -->
