Add a switch for notification counters [2/2]
Change-Id: I6b1eade0d1d1bc76298fcd070d69d8cbd73898df

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1664,4 +1664,8 @@
     <string name="theming_settings_dashboard_icons_default_accent">Round accent</string>
     <string name="theming_settings_dashboard_icons_plain">Plain</string>
     <string name="theming_settings_dashboard_icons_plain_accent">Plain accent</string>
+
+    <!-- StatusBar notification count -->
+    <string name="notif_count_title">Notification count</string>
+    <string name="notif_count_summary">Show notification count near notfication icons</string>
 </resources>
