Blissify: Add retro and md2 switch style
Change-Id: Ia7a60a9fdb15c06f150cce02a495059ce21eb0fa

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1657,6 +1657,8 @@
     <string name="switch_narrow">Narrow</string>
     <string name="switch_contained">Contained</string>
     <string name="switch_telegram">Telegram</string>
+    <string name="switch_retro">Retro</string>
+    <string name="switch_md2">Material Design 2</string>
 
     <!-- Settings dashboard icon style -->
     <string name="theming_settings_dashboard_icons_title">Settings dashboard icons</string>
