--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1767,6 +1767,8 @@
         <item>@string/switch_narrow</item>
         <item>@string/switch_contained</item>
         <item>@string/switch_telegram</item>
+        <item>@string/switch_retro</item>
+        <item>@string/switch_md2</item>
     </string-array>
 
     <string-array name="switch_style_values" translatable="false">
@@ -1775,6 +1777,8 @@
         <item>2</item>
         <item>3</item>
         <item>4</item>
+        <item>5</item>
+        <item>6</item>
     </string-array>
 
     <!-- Settings dashboard icon style -->
