Blissify: Adapt some preferences for ColorPicker
Signed-off-by: Anushek Prasal <anushekprasal@gmail.com>
Change-Id: I3bb053c1e6a1b36a844b47ea0fbdd217faff5e08

--- a/res/xml/blissify_notifications.xml
+++ b/res/xml/blissify_notifications.xml
@@ -75,7 +75,7 @@
             android:title="@string/pulse_ambient_light_color_title"
             android:persistent="false"
             android:dependency="pulse_ambient_light"
-            settings:defaultColorValue="0xFF3980FF" />
+            android:defaultValue="0xFF3980FF" />
 
         <com.bliss.support.preferences.SystemSettingSeekBarPreference
             android:key="pulse_ambient_light_duration"
