--- a/res/xml/lockscreen_clock.xml
+++ b/res/xml/lockscreen_clock.xml
@@ -71,7 +71,7 @@
      <com.bliss.support.colorpicker.ColorPickerPreference
         android:key="lockscreen_clock_color"
         android:title="@string/lockscreen_clock_color"
-        settings:defaultColorValue="0xffffffff"
+        android:defaultValue="0xffffffff"
         android:dependency="lockscreen_clock_type" />
 
     <Preference
@@ -142,7 +142,7 @@
      <com.bliss.support.colorpicker.ColorPickerPreference
         android:key="lockscreen_date_color"
         android:title="@string/lockscreen_clock_date_color"
-        settings:defaultColorValue="0xffffffff" />
+        android:defaultValue="0xffffffff" />
 
     </PreferenceCategory>
 
@@ -170,7 +170,7 @@
     <com.bliss.support.colorpicker.ColorPickerPreference
         android:key="lockscreen_owner_info_color"
         android:title="@string/lockscreen_owner_info_color"
-        settings:defaultColorValue="0xffffffff" />
+        android:defaultValue="0xffffffff" />
 
     </PreferenceCategory>
 
