notch-city: update 3 mode display cutout handler
Add tunable to hide display cutout [2/2]

Change-Id: Ie3db95ef59e08941e50a782d673ab0bbcc71c421

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1673,4 +1673,8 @@
     <!-- StatusBar notification count -->
     <string name="notif_count_title">Notification count</string>
     <string name="notif_count_summary">Show notification count near notfication icons</string>
+
+    <!-- Display cutout -->
+    <string name="sysui_display_cutout_title">Display cutout</string>
+    <string name="sysui_display_cutout_summary">Force the display cutout area to black</string>
 </resources>
