--- a/res/layout/bliss_preference.xml
+++ b/res/layout/bliss_preference.xml
@@ -20,34 +20,40 @@
     android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true"
-    android:layout_marginTop="-2dp"
+    android:orientation="horizontal"
+    android:gravity="center"
+    android:layout_marginTop="-3dp"
     android:layout_marginBottom="8dp">
 
     <ImageView
         android:id="@+id/buttonshape"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="20dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+	android:layout_marginTop="10dp"
+	android:layout_marginBottom="10dp"
+	android:layout_gravity="center_vertical"
         android:scaleType="center"
-        android:background="@drawable/buttonshape"/>
+        android:tint="#bbffffff"
+        android:src="@drawable/buttonshape"/>
 
     <ImageView
         android:id="@android:id/icon"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_alignRight="@id/buttonshape"
-        android:layout_marginStart="0dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginTop="28dp"
-        android:background="@*android:color/transparent"
-        android:scaleType="center" />
+    	android:layout_width="45dp"
+    	android:layout_height="45dp"
+        android:layout_alignLeft="@id/buttonshape"
+	android:layout_marginLeft="20dp"
+	android:layout_marginRight="20dp"
+        android:layout_marginTop="25dp"
+        android:layout_gravity="center_vertical"
+        android:gravity="center"
+        android:background="@*android:color/transparent"/>
 
     <ImageView
         android:id="@+id/view"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="50dp"
         android:background="@*android:color/transparent" />
 
     <TextView
@@ -62,8 +68,10 @@
         android:ellipsize="marquee"
         android:marqueeRepeatLimit="marquee_forever"
         android:scrollHorizontally="true"
-        android:fontFamily="@*android:string/config_bodyFontFamily"
-        android:textSize="14sp"
-        android:textColor="?android:attr/colorAccent"/>
+	android:fontFamily="@*android:string/config_bodyFontFamily"
+	android:textStyle="bold"
+	android:textAlignment="center"
+        android:textSize="20sp"
+        android:textColor="@*android:color/gradient_end"/>
 
 </RelativeLayout>
