--- a/res/xml/blissify_statusbar.xml
+++ b/res/xml/blissify_statusbar.xml
@@ -112,11 +112,118 @@
             <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
         </PreferenceScreen>
 
-      <Preference
-            android:key="advanced_icons"
-            android:title="@string/statusbar_advanced_icons"
-            android:summary="@string/statusbar_advanced_icons_summary"
-            android:fragment="com.blissroms.blissify.fragments.statusbar.AdvancedStatusbar" />
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="use_old_mobiletype"
+            android:title="@string/use_old_mobiletype_title"
+            android:summary="@string/use_old_mobiletype_summary"
+            android:defaultValue="false" />
+
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="data_disabled_icon"
+            android:title="@string/data_disabled_icon_title"
+            android:summary="@string/data_disabled_icon_summary"
+            android:defaultValue="true"/>
+
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="roaming_indicator_icon"
+            android:title="@string/roaming_indicator_icon_title"
+            android:summary="@string/roaming_indicator_icon_summary"
+            android:defaultValue="true"/>
+
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="show_fourg_icon"
+            android:title="@string/show_fourg_icon_title"
+            android:summary="@string/show_fourg_icon_summary"
+            android:defaultValue="false"/>
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="volte_icon_category"
+        android:icon="@drawable/ic_volte"
+        android:title="@string/volte_icon_title" >
+
+       <com.bliss.support.preferences.SystemSettingListPreference
+            android:key="volte_icon_style"
+            android:title="@string/volte_icon_title"
+            android:entries="@array/status_bar_volte_entries"
+            android:entryValues="@array/status_bar_volte_values"
+            android:summary="%s"
+            android:defaultValue="0"/>
+
+       <com.bliss.support.preferences.SystemSettingListPreference
+            android:key="vowifi_icon_style"
+            android:title="@string/vowifi_icon_style_title"
+            android:entries="@array/vowifi_icon_style_entries"
+            android:entryValues="@array/vowifi_icon_style_values"
+            android:summary="%s"
+            android:defaultValue="0"/>
+
+       <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="volte_vowifi_override"
+            android:title="@string/volte_vowifi_override_title"
+            android:summary="@string/volte_vowifi_override_summary"
+            android:defaultValue="true"/>
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="status_bar_logo"
+        android:icon="@drawable/ic_statusbar_icons"
+        android:title="@string/status_bar_logo_category" >
+
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="status_bar_logo"
+            android:title="@string/status_bar_bliss_logo_title"
+            android:summary="@string/status_bar_bliss_logo_summary" />
+
+        <com.bliss.support.colorpicker.ColorPickerPreference
+            android:key="status_bar_logo_color"
+            android:title="@string/status_bar_bliss_logo_color"
+            android:defaultValue="0xffffffff"
+            android:dependency="status_bar_logo" />
+
+       <com.bliss.support.preferences.SystemSettingListPreference
+            android:key="status_bar_logo_position"
+            android:title="@string/status_bar_bliss_logo_position"
+            android:dialogTitle="@string/status_bar_bliss_logo_position"
+            android:entries="@array/status_bar_logo_position_entries"
+            android:entryValues="@array/status_bar_logo_position_values"
+            android:defaultValue="0"
+            android:dependency="status_bar_logo" />
+
+       <com.bliss.support.preferences.SystemSettingListPreference
+            android:key="status_bar_logo_style"
+            android:title="@string/status_bar_bliss_logo_style"
+            android:dialogTitle="@string/status_bar_bliss_logo_style"
+            android:entries="@array/status_bar_logo_style_entries"
+            android:entryValues="@array/status_bar_logo_style_values"
+            android:defaultValue="0"
+            android:dependency="status_bar_logo" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="status_bar_weather_category"
+        android:icon="@drawable/ic_weather"
+        android:title="@string/status_bar_weather_category" >
+
+       <com.bliss.support.preferences.SystemSettingListPreference
+            android:key="status_bar_show_weather_temp"
+            android:title="@string/statusbar_weather_title"
+            android:dialogTitle="@string/statusbar_weather_dialog_title"
+            android:entries="@array/status_bar_weather_entries"
+            android:entryValues="@array/status_bar_weather_values"
+            android:summary="%s"
+            android:defaultValue="0" />
+
+       <com.bliss.support.preferences.SystemSettingListPreference
+            android:key="status_bar_show_weather_location"
+            android:title="@string/status_bar_weather_location_title"
+            android:entries="@array/status_bar_weather_location_entries"
+            android:entryValues="@array/status_bar_weather_location_values"
+            android:summary="%s"
+            android:defaultValue="0" />
 
     </PreferenceCategory>
 
@@ -156,6 +263,19 @@
             android:title="@string/status_bar_toggle_brightness"
             android:summary="@string/status_bar_toggle_brightness_summary"
             android:defaultValue="false" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="bluetooth_battery_category"
+        android:icon="@drawable/ic_bluetooth_battery"
+        android:title="@string/bluetooth_battery_title" >
+
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="bluetooth_show_battery"
+            android:title="@string/bluetooth_battery_title"
+            android:summary="@string/bluetooth_battery_summary"
+            android:defaultValue="true"/>
+
     </PreferenceCategory>
 
 </PreferenceScreen>
