--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -208,11 +208,13 @@
         android:icon="@drawable/ic_shortcuts"
         android:title="@string/lockscreen_shortcuts_category_title" >
 
-    <Preference
+        <Preference
          android:title="@string/lockscreen_shortcuts_title"
          android:summary="@string/lockscreen_shortcuts_summary">
-         <intent android:action="com.android.settings.action.LOCK_SCREEN_TUNER" />
-    </Preference>
+            <intent android:action="android.intent.action.MAIN"
+                android:targetPackage="com.android.systemui"
+                android:targetClass="com.android.systemui.tuner.LockscreenActivity" />
+        </Preference>
 
     </PreferenceCategory>
 
