--- a/res/xml/blissify_themes.xml
+++ b/res/xml/blissify_themes.xml
@@ -90,6 +90,13 @@
             android:key="android.theme.customization.icon_pack.android"
             android:title="@string/theme_customization_sysui_icon_title"/>
 
+    <ListPreference
+        android:key="android.theme.customization.statusbar_height"
+        android:title="@string/theme_customization_statusbar_height_title"/>
+
+    <ListPreference
+        android:key="android.theme.customization.ui_radius"
+        android:title="@string/theme_customization_ui_radius_title"/>
     </PreferenceCategory>
 
     <PreferenceCategory
