--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -330,6 +330,8 @@
     <string name="hardware_keys_action_close_app">Kill app</string>
     <string name="hardware_keys_action_torch">Torch</string>
     <string name="hardware_keys_action_screenshot">Screenshot</string>
+    <string name="hardware_keys_action_screenshot_partial">Partial Screenshot</string>
+    <string name="hardware_keys_action_screenshot_long">Long Screenshot</string>
     <string name="hardware_keys_action_volume_panel">Toggle Volume panel</string>
     <string name="hardware_keys_action_clear_all_notifications">Clear all notifications</string>
     <string name="hardware_keys_action_notifications_panel">toggle notifications panel</string>
@@ -1330,6 +1332,8 @@
     <string name="action_volume_panel">Volume panel</string>  
     <string name="action_screen_off">Screen off</string>
     <string name="action_screenshot">Screenshot</string>
+    <string name="action_screenshot_partial">Partial Screenshot</string>
+    <string name="action_screenshot_long">Long Screenshot</string>
     <string name="action_qs_panel">QS panel</string>
     <string name="action_notifications">Notifications</string>
     <string name="action_clear_notifications">Clear notifications</string>
