--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -410,6 +410,8 @@
         <item>@string/hardware_keys_action_close_app</item>
         <item>@string/hardware_keys_action_torch</item>
         <item>@string/hardware_keys_action_screenshot</item>
+        <item>@string/hardware_keys_action_screenshot_partial</item>
+        <item>@string/hardware_keys_action_screenshot_long</item>
         <item>@string/hardware_keys_action_volume_panel</item>
         <item>@string/hardware_keys_action_clear_all_notifications</item>
         <item>@string/hardware_keys_action_notifications_panel</item>
@@ -1348,6 +1350,8 @@
         <item>@string/action_screen_off</item>
         <item>@string/action_notifications</item>
         <item>@string/action_screenshot</item>
+        <item>@string/action_screenshot_partial</item>
+        <item>@string/action_screenshot_long</item>
         <item>@string/action_qs_panel</item>
         <item>@string/action_ringer_modes</item>
     </string-array>
@@ -1365,6 +1369,8 @@
         <item>9</item>
         <item>10</item>
         <item>11</item>
+        <item>14</item>
+        <item>15</item>
     </string-array>
 
     <string-array name="ambient_notification_light_timeout_entries" translatable="false">
