Blissify: Show or Hide manual rotation button [2/2]
Change-Id: I3f6379f59c2c62108dcb1bf91a11c19562688f40

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1729,4 +1729,8 @@
     <string name="qs_header_background_title">Statusbar background</string>
     <string name="qs_header_background_black">Black</string>
     <string name="qs_header_background_transparent">Transparent</string>
+
+    <!-- Rotation button -->
+    <string name="show_rotation_button_title">Rotation button</string>
+    <string name="show_rotation_button_summary">Display rotation button on navigation bar when available</string>
 </resources>
