--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -759,6 +759,8 @@
     <string name="audio_panel_view_voice_title">Voice</string>
     <string name="audio_panel_view_bt_sco_title">Bluetooth</string>
     <string name="audio_panel_view_timeout_title">Volume panel timeout</string>
+    <string name="volume_panel_show_ringer">Show ringer</string>
+    <string name="volume_panel_show_ringer_summary">Show ringer button on top of volume panel</string>
 
     <!-- Heads up timeout -->
     <string name="heads_up_time_out_title">Time out</string>
