--- a/res/xml/volume_panel.xml
+++ b/res/xml/volume_panel.xml
@@ -34,6 +34,12 @@
         android:summary="@string/volume_panel_musiccard_summary"
         android:defaultValue="true" />
 
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="show_ringer_volume_panel"
+        android:title="@string/volume_panel_show_ringer"
+        android:summary="@string/volume_panel_show_ringer_summary"
+        android:defaultValue="true"/>
+
     <com.bliss.support.preferences.SystemSettingSeekBarPreference
         android:key="audio_panel_view_timeout"
         android:title="@string/audio_panel_view_timeout_title"
