Blissify: Keygyuard clock animation [2/2]
Change-Id: I67985a5116ab00a8a4f0e83fdeeb2dd289293edf

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1779,4 +1779,10 @@
     <string name="lock_clock_color_accent">Accent</string>
     <string name="aosp_weather">Aosp Weather</string>
     <string name="omni_weather">Omni Weather</string>
+
+    <!-- Lockscreen Clock Animation -->
+    <string name="keyguard_clock_animation_title">Keyguard Clock Animation</string>
+    <string name="floral">floral</string>
+    <string name="wavy">wavy</string>
+    <string name="circle">circle</string>
 </resources>
