--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1881,4 +1881,21 @@
         <item>5</item>
     </string-array>
 
+    <!-- Clock Flow -->
+    <string-array name="clock_flow_entries">
+        <item>@string/disabled</item>
+        <item>@string/pin_wheel</item>
+        <item>@string/floral</item>
+        <item>@string/wavy</item>
+        <item>@string/circle</item>
+    </string-array>
+
+    <string-array name="clock_flow_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+    </string-array>
+
 </resources>
