--- a/res/xml/lockscreen_clock.xml
+++ b/res/xml/lockscreen_clock.xml
@@ -35,6 +35,13 @@
         android:defaultValue="2" />
 
     <com.bliss.support.preferences.SystemSettingListPreference
+        android:key="keyguard_clock_flow"
+        android:title="@string/keyguard_clock_flow_title"
+        android:entries="@array/clock_flow_entries"
+        android:entryValues="@array/clock_flow_values"
+        android:defaultValue="0" />
+
+    <com.bliss.support.preferences.SystemSettingListPreference
         android:key="lock_clock_font_style"
         android:title="@string/clock_font_style_title"
         android:entries="@array/font_style_entries"
