--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1744,4 +1744,7 @@
     <string name="theme_type_xtended_clear">Clear Theme</string>
     <string name="theme_type_material_ocean">Material Ocean</string>
 
+    <string name="pin_wheel">pin wheel</string>
+    <string name="keyguard_clock_flow_title">Keyguard clock flow</string>
+
 </resources>
