Blissify: update clock preferences as per clock style
Change-Id: I1d59a58acbb9857811741409ae97c67f9daf13ef

--- a/res/xml/lockscreen_clock.xml
+++ b/res/xml/lockscreen_clock.xml
@@ -16,6 +16,11 @@
     android:key="lockscreen_clock_fragment"
     android:title="@string/lockscreen_clock_category">
 
+    <!-- Bliss Logo Header -->
+    <Preference
+        android:key="bliss_logo"
+        android:layout="@layout/bliss_logo" />
+
     <!-- LockScreen Clocks -->
     <PreferenceCategory
         android:key="lockscreen_clock_category"
