Blissify: update preferences as per clock style
Change-Id: I1d59a58acbb9857811741409ae97c67f9daf13ef

--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1898,4 +1898,14 @@
         <item>4</item>
     </string-array>
 
+    <string-array name="analog_clocks">
+        <item>AnalogClockController</item>
+        <item>BlissClockController</item>
+        <item>CustomNumClockController</item>
+        <item>DotClockController</item>
+        <item>SneekyClockController</item>
+        <item>SpectrumClockController</item>
+        <item>SpideyClockController</item>
+    </string-array>
+
 </resources>
