--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1881,4 +1881,17 @@
         <item>5</item>
     </string-array>
 
+    <!-- Lock Clock Color types -->
+    <string-array name="lock_clock_color_entries">
+        <item>@string/lock_clock_color_picker</item>
+        <item>@string/lock_clock_color_accent</item>
+        <item>@string/lock_clock_color_random</item>
+    </string-array>
+
+    <string-array name="lock_clock_color_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
 </resources>
